# FetalBrainMRI

./: PLAN.md  PROGRESS.md  SPEC.md  TEST.md  completion_audit.md  package.json  pnpm-lock.yaml  publication_handoff_checklist.md  pyproject.toml  reader_study_protocol.md  source_data_final_lock.md  source_verification_dossier.md  validation_analysis_lock.md  validation_data_dictionary.md
client/: index.html
client/src/: index.css
client/src/components/: DifferentialCard.tsx  ParameterRow.tsx
client/src/lib/: architecture.test.ts  biometry.test.ts  biometry.ts  client-shell.test.ts  genai.test.ts  genai.ts  methodology-page.test.ts  report.ts  source-detail-ui.test.ts  validation-data-schema.test.ts  validation-data-schema.ts  validation-metrics.test.ts  validation-metrics.ts  validation-page.test.ts  workflow-ui.test.ts
client/src/pages/: Home.tsx  Methodology.tsx  Validation.tsx
python_app/: __init__.py  biometry.py  main.py  registry.py
python_app/static/: htmx.min.js  tailwind.css
python_app/templates/: index.html
validation_export_templates/: report_audit_rows.csv
